ingress-nginx1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-019969b6a5f7dd472, subnet-0732fb8924c55b646
    alb.ingress.kubernetes.io/security-groups: sg-084bdf15235172893
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: dev
    external-dns.alpha.kubernetes.io/hostname: dev.btiwoom.com
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    
spec:
  rules:
  - host: "dev.btiwoom.com"
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: nginx
            port:
              number: 443
